# nanobind_opencv

./: CMakeLists.txt  LICENSE  README.md  cv_typecaster.h  example_ext.cpp  setup.py  test.py
src/: cv_typecaster.h  nanobind_opencv_example.cpp
src/nanobind_opencv_example/: __init__.py
